# cron-cloudflare

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  release-build.sh
.github/workflows/: build.yml  build_multi_arch.yml
config/: config.example.yaml
docker/: platform.sh
src/: main.rs
src/models/: cloudflare_response.rs  config.rs  domain.rs  mod.rs
src/services/: config_reader.rs  cron.rs  mod.rs  requests.rs
