[package]
name = "cron-cloudflare"
version = "0.0.2"
edition = "2021"
authors = ["Fernando 'bife' Penna <futured@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
error-chain = "0.12.4"
cronjob = "0.4.17"
once_cell = "1.17.0"
dotenv = "0.15.0"
chrono = "0.4.23"